[package]
name = "embedded-hal-sync-pins"
version = "0.7.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2018"
description = "embedded-hal pin implementations that can be shared between threads"
repository = "https://github.com/niclashoyer/embedded-hal-sync-pins"
license = "MIT OR Apache-2.0"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
embedded-hal = "1.0.0-alpha.9"
vcd = { version = "0.6", optional = true }

[features]
vcd-value = ["vcd"]
